  improvements:  1) congestion control has been aligned with the Linux
  architecture, to facilitate easier coding of new congestion control algorithms
  or porting implementations from the Linux kernel, 2) Fast Retransmit and Fast
  recovery algorithms, compliant to RFCs, are shared by all TCP variants, unlike
  previous releases. 3) TCP Hybla and TCP HighSpeed have been added.
- (general) The PrintRoutingTable* functions now print the following informations
  each time they are called: 1) the node ID, 2) the global time, 3) the local time
  4) the routing protocol type

Bugs fixed
----------
- Bug 1132 - useless for loops in block-ack-test-suite.cc
- Bug 1571 - TCP zero-window and flow control window updates by the receiver
- Bug 1761 - Rounding with olsr::EmfToSeconds
- Bug 1954 - Serialized size of wifi-net-device differ for TX and RX trace
- Bug 2003 - Missing DSSS short PLCP preamble
- Bug 2041 - TCP RTO needs unit tests
- Bug 2150 - The TCP sender keeps retransmitting and does not terminate the connection after some retries.
- Bug 2159 - TCP advertises wrong receive window
- Bug 2183 - LiIonEnergySourceHelper is not in the energy wscript
- Bug 2185 - WiFi MacLow may respond to errored frames that it should ignore
- Bug 2195 - Udp[*]Client can't send packets to broadcast address

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.24.1
==============

Release 3.24.1 is a maintenance release that fixes three issues:
- support for Xcode 7 clang compiler version
- detection of Python bindings location
- compilation problem on 32-bit gcc-4.4 machine

The issues prevented selected systems from being able to successfully
build ns-3, and prevented the released version from being able to
detect the presence of pybindgen used for Python bindings.

Availability
------------
This release is available from:
https://www.nsnam.org/release/ns-allinone-3.24.1.tar.bz2

Supported platforms