@@ -128,6 +128,22 @@ public:
    * The caller does not get ownership of the returned pointer.
    */
   void Insert (Ptr<IpL4Protocol> protocol);
+
+  /**
+   * \brief Add a L4 protocol to a specific interface.
+   *
+   * This may be called multiple times for multiple interfaces for the same
+   * protocol.  To insert for all interfaces, use the separate
+   * Insert (Ptr<IpL4Protocol> protocol) method.
+   *
+   * Setting a protocol on a specific interface will overwrite the
+   * previously bound protocol.
+   *
+   * \param protocol L4 protocol.
+   * \param interfaceIndex interface index.
+   */
+  void Insert (Ptr<IpL4Protocol> protocol, uint32_t interfaceIndex);
+
   /**
    * \param protocolNumber number of protocol to lookup
    *        in this L4 Demux
@@ -137,6 +153,15 @@ public:
    * to forward packets up the stack to the right protocol.
    */
   virtual Ptr<IpL4Protocol> GetProtocol (int protocolNumber) const;
+
+  /**
+   * \brief Get L4 protocol by protocol number for the specified interface.
+   * \param protocolNumber protocol number
+   * \param interfaceIndex interface index, -1 means "any" interface.
+   * \return corresponding IpL4Protocol or 0 if not found
+   */
+  virtual Ptr<IpL4Protocol> GetProtocol (int protocolNumber, int32_t interfaceIndex) const;
+
   /**
    * \param protocol protocol to remove from this demux.
    *
@@ -144,6 +169,13 @@ public:
    * returned from the Ipv4L4Protocol::Insert method.
    */
   void Remove (Ptr<IpL4Protocol> protocol);
+
+  /**
+   * \brief Remove a L4 protocol from a specific interface.
+   * \param protocol L4 protocol to remove.
+   * \param interfaceIndex interface index.
+   */
+  void Remove (Ptr<IpL4Protocol> protocol, uint32_t interfaceIndex);
 
   /**
    * \param ttl default ttl to use
@@ -435,10 +467,16 @@ private:
    * \brief Container of the IPv4 Raw Sockets.
    */
   typedef std::list<Ptr<Ipv4RawSocketImpl> > SocketList;
+
+  /**
+   * \brief Container of the IPv4 L4 keys: protocol number, interface index
+   */
+  typedef std::pair<int, int32_t> L4ListKey_t;
+
   /**
    * \brief Container of the IPv4 L4 instances.
    */
-   typedef std::list<Ptr<IpL4Protocol> > L4List_t;
+  typedef std::map<L4ListKey_t, Ptr<IpL4Protocol> > L4List_t;
 
   bool m_ipForward;      //!< Forwarding packets (i.e. router mode) state.
   bool m_weakEsModel;    //!< Weak ES model state
